syntax = "proto3";

option csharp_namespace = "CosmosCompute";

package greet;

service ControlPlane {
  rpc GetCurrentConsumption (GetCurrentConsumptionRequest) returns (GetCurrentConsumptionResponse) {}
  rpc CommitRouteHandler (CommitRouteHandlerRequest) returns (CommitRouteHandlerResponse) {}
}

enum RouteHandlerLanguage {
  ROUTE_HANDLER_Invalid = 0;
  Javascript = 1;
}


message GetCurrentConsumptionRequest {
  string OrganizationId = 1;
}

message GetCurrentConsumptionResponse {
  oneof Result {
    ConsumptionDetail Details = 1;
    Error Error = 2;
  }
}

message Error{
  string Message = 1;
}

message ConsumptionDetail {
  uint64 TotalRequestCount = 1;
  uint64 TotalResponseBytes = 2;
  uint64 TotalExecutionTimeMicroseconds = 3;
  uint64 TotalConsumptionByteMilliseconds = 4;
}




message CommitRouteHandlerRequest {
  string OrganizationId = 1;

  string Committer = 2;
  string CommitMessage = 3;

  string Route = 4;

  RouteHandlerLanguage HandlerScriptLanguage = 5;
  string HandlerScriptBody = 6;
}

message CommitRouteHandlerResponse {
  bool Success = 1;
  string Error = 2;
}

